<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/notification_bar"></LinearLayout>

    <ImageView
        android:id="@+id/inImageService"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_select_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/notification_bar"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Btn_selectServiceImage"
        android:drawableTop="@drawable/ic_touch"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/inServiceName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_alignParentTop="true"
        android:autofillHints=""
        android:background="@drawable/bt_bg_color"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Input_serviceName"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/notification_bar"
        android:textColorHint="@color/notification_bar"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inServiceDescription"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_alignParentTop="true"
        android:autofillHints=""
        android:background="@drawable/bt_bg_color"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Input_serviceDescription"
        android:inputType="textImeMultiLine"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/notification_bar"
        android:textColorHint="@color/notification_bar"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/inServiceDateInit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:background="@drawable/bt_bg_color"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/Input_serviceDateInit"
            android:drawablePadding="10dp"

            android:drawableRight="@drawable/ic_calendar"
            android:clickable="true"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="12dp"
            android:textColor="@color/notification_bar"
            android:textColorHint="@color/notification_bar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/inServiceDateEnd"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bt_bg_color"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/Input_serviceDateEnd"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_calendar"
            android:clickable="true"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:textColor="@color/notification_bar"
            android:textColorHint="@color/notification_bar"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/In_numPasses"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:clickable="true"
        android:autofillHints=""
        android:background="@drawable/bt_bg_color"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Input_addPasses"
        android:drawableRight="@drawable/ic_add"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:inputType="number"
        android:textColor="@color/notification_bar"
        android:textColorHint="@color/notification_bar"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnRegisterService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:background="@drawable/bt_bg"
        android:backgroundTint="@color/notification_bar"
        android:clickable="true"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Btn_registerService"
        android:layout_marginLeft="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/ic_publish"
        android:textAllCaps="true"
        android:textColor="@color/white" />



</LinearLayout>